<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/UnitsCategory" >
     <ListPreference
            android:key="@string/units"
            android:summary="@string/UnitsPrefSummary"
            android:title="@string/UnitsPrefTitle" 
            android:entries="@array/units_enteries"
            android:entryValues="@array/units_ualues"
            android:defaultValue="1"/>
     
         <ListPreference
            android:key="@string/altitudeUnitsKey"
            android:summary="@string/AltitudeUnitsPrefSummary"
            android:title="@string/AltitudePrefTitle" 
            android:entries="@array/altitude_units_enteries"
            android:entryValues="@array/altitude_units_ualues"
            android:defaultValue="1"/>
         
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/MapCategory" >
        <ListPreference
            android:key="@string/LineColorPref"
            android:summary="@string/LineColorSummary"
            android:title="@string/LineColorTitle" 
            android:entries="@array/line_color_enteries"
            android:entryValues="@array/line_color_values"
            android:defaultValue="1"/>
       <ListPreference
            android:key="@string/LineWidthPref"
            android:summary="@string/LineWidthSummary"
            android:title="@string/LineWidthTitle" 
            android:entries="@array/line_width_enteries"
            android:entryValues="@array/line_width_val"
            android:defaultValue="5"/>       
       <ListPreference
            android:key="@string/ZoomPref"
            android:summary="@string/ZoomSummary"
            android:title="@string/ZoomTitle" 
            android:entries="@array/zoom_enteries"
            android:entryValues="@array/zoom_values"
            android:defaultValue="15"/>
       
 
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/SavingOptionsCategory" >
        <ListPreference
            android:key="@string/AutoSavePrefKey"
            android:summary="@string/AutoSaveSummary"
            android:title="@string/AutoSaveTitle"
            android:entries="@array/AutoSaveEnteries"
            android:entryValues="@array/AutoSaveValues"
            android:defaultValue="0"/>

    </PreferenceCategory>
</PreferenceScreen>